MockUp/index.css
html {
   background-color: #333;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
}

#Logo {
   width: auto;
   height: 125px;
   padding: 2px;
}

p {
   margin: 0;
}

ul {
   padding: 0%;
   margin: 0px;
}

header {
   background-color: rgb(116, 0, 0);
}

#toolBarList {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #1f1f1f;
}

header li {
   float: left;
}

header li a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* Change the link color to #111 (black) on hover */
header ul li a:hover {
   background-color: #111;
}


/*over all container for 2 boxes at top*/
#topContentContainer {
   display: inline;
}


/*box on left for quickstandings this element is a direct pearent to the ul that holds all the uls*/
#quickStandings {
   float: left;
   margin-left: 2%;
   /* margin-top: 10px; */
   background-color: rgba(255, 255, 255, 0.644);
   padding: 2px 2px 2px 2px;
   border: #111 solid;
   border-radius: 2px;
   display: flex;
   flex-wrap: wrap;
}

/*reffering to the ul that holds all of the uls for the quickStandings box direct pearnt of them*/
#quickStandings table {
   table-layout: auto;
   padding: 0px 10px 0px 0px;
   border-collapse: collapse;
}

/* boarder around each row of the table*/
#quickStandings table tr td,
#quickStandings th {
   border-top: #111 solid thin;
   border-bottom: #111 solid thin;
   border-right: #979494 solid thin;
   border-left: #979494 solid thin;
}

/* quickStandings table data 3px padding left and right and a 2px padding top and bottom */
#quickStandings table td,
#quickStandings th {
   padding: 3px 3px 3px 3px;
   text-align: center;
   font-weight: bold;
   color: #111;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}




#quickStandings table tr:nth-child(even) {
   background-color: #f2f2f2;
}




/* seperator for css*/


/*reffering to the ul that holds all the uls for the upcomingGames box direct pearnt of them*/
#upcomingGames table {
   table-layout: auto;
   padding: 0px 10px 0px 0px;
   border-collapse: collapse;
}

#upcomingGames table tr td,
#upcomingGames th {
   border-top: #111 solid thin;
   border-bottom: #111 solid thin;
   border-right: #979494 solid thin;
   border-left: #979494 solid thin;
   font-size: larger;

}



/* upcomingGames table data 5px padding left and right and a 10px padding top and bottom*/
#upcomingGames table td,
#upcomingGames th {
   padding: 5px 10px 5px 10px;

   text-align: center;
   font-size: larger;
   font-weight: bold;
   color: #111;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

#upcomingGames table tr:nth-child(even) {
   background-color: #f2f2f2;
}

/*the upcomingGames box*/
#upcomingGames {
   background-color: rgba(255, 255, 255, 0.644);
   padding: 2px 2px 2px 2px;
   float: right;
   /* margin-top: 10px; */
   /* width: 1000px; */
   border: #111 solid;
   border-radius: 2px;
   text-align: center;
   margin: auto;
   /* position: relative; */
   /* left: 50%; */
}


/* seperator for css*/



/*wrapper element for the upcomingGames box for position purposes*/
#wrapperUpcomingGames {
   /* background-color: aqua; */
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
}



/* seperator for css*/

/*wrapper element for the youtube box for position purposes and align center under the upcomingGames*/
#wrapperYoutube {
   /* background-color: aqua; */
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
   position: relative;



}

#youTube {
   /* background-color: aqua; */
   display: flex;
   margin-top: 10px;
   flex-wrap: wrap;
   margin: auto;
   aspect-ratio: 16/9;
   position: relative;
   left: auto;

}

